# norm_constrained_qp_solver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  setup.py.in
doc/: build_from_source.md  consuming_the_conan_package.md
include/: norm_constrained_qp_solver.hpp  norm_constrained_qp_solver_sparse.hpp
python/: ncs_sparse.py  test_manopt.py
src/: python_bindings.cpp
src/norm_constrained_qp_solver/: __init__.py
test/: CMakeLists.txt  test_solver.cpp
